crates/djls-project/tests/snapshots/extraction__golden_loader_tags.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"loader-tags extraction snapshot should serialize\")"
---
tag_rules:
  "django.template.loader_tags::tag::block":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          PercentFormat:
            template: "'%s' tag takes only one argument"
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: block_name
        required: true
        kind: Variable
    as_var: keep
  "django.template.loader_tags::tag::include":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - with
        - only
      duplicate_rejection: detected
      unknown_rejection: detected
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "%r tag takes at least one argument: the name of the template to be included."
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
    as_var: keep
filter_arities: {}
block_specs:
  "django.template.loader_tags::tag::block":
    body_analysis_evidence: not_detected
    end_tag: endblock
    intermediates: []
