crates/djls-project/tests/snapshots/extraction__golden_no_registrations.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"unregistered-source extraction snapshot should serialize\")"
---
definitions: {}
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs: {}
