crates/djls-project/tests/snapshots/extraction__golden_non_bits_variable.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"custom parser extraction snapshot should serialize\")"
---
tag_rules:
  "app.templatetags.custom::tag::custom_tag":
    arg_constraints:
      - Exact: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 3
        message:
          Static: "'custom_tag' requires exactly two arguments"
    argument_syntax:
      Parameters:
        - name: arg1
          requirement: required
          kind: Variable
        - name: arg2
          requirement: required
          kind: Variable
    as_var: keep
filter_arities: {}
block_specs: {}
