crates/djls-project/tests/snapshots/extraction__golden_wagtailadmin_tags.snap
---
source: crates/djls-project/tests/extraction.rs
expression: "sorted_snapshot(&result).expect(\"Wagtail admin extraction snapshot should serialize\")"
---
definitions:
  "filter::intcomma":
    kind: filter
    has_doc: false
  "tag::dialog":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs: {}
